<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.havvyapps.oldfields_new.MainActivity"
    tools:showIn="@layout/main_app_bar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:id="@+id/welcome_text"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:src="@mipmap/bar_image"
        android:id="@+id/bar_image"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/hours_header"
        android:layout_below="@+id/bar_image"
        android:text="@string/hours_header"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hours_list"
        android:layout_below="@+id/hours_header"
        android:layout_above="@+id/ccparent"
        android:paddingBottom="@dimen/activity_vertical_margin">
    </ListView>

    <RelativeLayout
        android:id="@+id/ccparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="30sp">

        <ImageView
            style="@style/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visa"
            android:id="@+id/visa"
            android:contentDescription="@string/visa"/>

        <ImageView
            style="@style/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mastercard"
            android:layout_toRightOf="@id/visa"
            android:layout_toEndOf="@id/visa"
            android:id="@+id/mastercard"
            android:contentDescription="@string/mastercard"/>

        <ImageView
            style="@style/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/amexpress"
            android:layout_toRightOf="@id/mastercard"
            android:layout_toEndOf="@id/mastercard"
            android:id="@+id/amexpress"
            android:contentDescription="@string/am_express"/>

        <ImageView
            style="@style/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/discover"
            android:layout_toRightOf="@id/amexpress"
            android:layout_toEndOf="@id/amexpress"
            android:id="@+id/discover"
            android:contentDescription="@string/discover"/>
    </RelativeLayout>
</RelativeLayout>
